--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,16 +41,9 @@
 </header>
 
 {% block body %}{% endblock %}
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 <footer>
-    <h5> &copy; Eni CopieRight</h5>
+    <h5 class="sticky-sm-bottom"> &copy; Eni, Farid, Gaspard & Hélène</h5>
 </footer>
 
 </body>
